UtahLiveDataTest/src/objects/StrategicPlanPrograms__c.object
<CustomObject>
    <description>[Business] This object associates the Strategic plan with an Internal Program</description>
    <fields>
        <fullName>Agency__c</fullName>
        <formula>Program__r.Account__r.Name</formula>
        <label>Agency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ProgramName__c</fullName>
        <formula>Program__r.PointOfContact__c</formula>
        <label>Program Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProgramType__c</fullName>
        <formula>Text(Program__r.ProgramType__c)</formula>
        <label>Program Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>State Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Strategic Plan Programs</relationshipLabel>
        <relationshipName>Strategic_Plan_Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StrategicPlan__c</fullName>
        <label>Strategic Plan</label>
        <referenceTo>StrategicPlan__c</referenceTo>
        <relationshipLabel>Strategic Plan Programs</relationshipLabel>
        <relationshipName>Strategic_Plan_Programs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Strategic Plan Program</label>
    <nameField>
        <displayFormat>STPGM-{0000}</displayFormat>
        <label>Strategic Plan Programs Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Strategic Plan Programs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>